objects/QuickInfoObj__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>A__c</fullName>
        <label>A</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <label>C</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>D__c</fullName>
        <label>D</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EE__c</fullName>
        <label>EE</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QuickInfoObjDescription__c</fullName>
        <label>QuickInfoObjDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuickInfoOnlineAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuickInfoOnlineAvailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuickInfoPhone__c</fullName>
        <label>QuickInfoPhone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Specialquot_info__c</fullName>
        <label>Special* &quot; info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>T__c</fullName>
        <label>T</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bb__c</fullName>
        <label>bb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>e__c</fullName>
        <label>e</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>p__c</fullName>
        <label>p</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QuickInfo</label>
</CustomObject>